--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body{
   font-size: 16px;
   font-weight: 700;
 }
+
 .gs{
   background: rgb(251, 66, 66);
   padding: 8px 15px;
@@ -57,4 +58,7 @@ body{
   padding: 12px 36px;
   background: #ffa146;
   border: 1px solid white;
+}
+.navbar-brand img{
+  max-width: 150px;
 }
